[gd_scene format=3 uid="uid://bv6r5x26wt58k"]

[ext_resource type="Script" path="res://root.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://ojr3m363ykme" path="res://Images/Farm.jpg" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dlvbbcm2ps2ss" path="res://main_ui_test.tscn" id="3_h2yge"]

[node name="Main" type="Node2D" unique_id=1326734331]
script = ExtResource("1_ig7tw")

[node name="Background" type="CanvasLayer" parent="." unique_id=293841992]

[node name="Sprite2D" type="Sprite2D" parent="Background" unique_id=601345429]
position = Vector2(575, 360)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_0xm2m")

[node name="MainUI" parent="." unique_id=990377633 instance=ExtResource("3_h2yge")]

[node name="VBoxContainer2" type="VBoxContainer" parent="MainUI" unique_id=1776944640]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -91.0
offset_right = 151.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameInput" type="LineEdit" parent="MainUI/VBoxContainer2" unique_id=710728252]
layout_mode = 2
placeholder_text = "Enter Username"

[node name="TaskLengthInput" type="LineEdit" parent="MainUI/VBoxContainer2" unique_id=1652881833]
layout_mode = 2
placeholder_text = "Enter Task Length"
virtual_keyboard_type = 2

[node name="CalculateButton" type="Button" parent="MainUI/VBoxContainer2" unique_id=1315476118]
layout_mode = 2
text = "Calculate"

[node name="LevelLabel" type="Label" parent="MainUI/VBoxContainer2" unique_id=1523117723]
layout_mode = 2
text = "Level will appear here."

[node name="TasksLeftLabel" type="Label" parent="MainUI/VBoxContainer2" unique_id=949144840]
layout_mode = 2
text = "Tasks remaining will appear here"
